<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General App Strings -->
    <string name="app_name">MusicMania</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_text">Welcome to CS 5200</string>
    <string name="welcome_user">Welcome user1</string>
    <string name="search_last_fm_text">Search Last.FM Demo</string>
    <string name="final_project_text">Final Project</string>
    <string name="action_settings">Settings</string>
    <string name="go_to_main_page_text">Go Home</string>
    
    <!-- Main Project Page Strings -->   
    <string name="see_user_profile_button_text">See User Profile</string>
    <string name="search_button_text">Search Music</string>
    <string name="create_new_playlist_button_text">Create Playlist</string>
    <string name="watch_playlist_button_text">Watch Playlist</string>
    <string name="get_recommendation_button_text">Get Recommendation</string>
    
    <!-- YouTube API DEMO Strings -->    
    <string name="search_term_text">Enter the search query</string>
    <string name="youtube_api_demo_text">YouTube API Demo</string>
    <string name="youtube_demo_text">Youtube Demo</string>
    <string name="fetch_youtube_video_text">Fetch YouTube video</string>
    
    <!-- LastFM API DEMO Strings -->    
    <string name="last_fm_api_demo_text">LastFM API Demo</string>
    <string name="last_fm_demo_text">LastFM Demo</string>
    <string name="search_last_fm_query_text">Search Query</string>
    <string name="artist_radio_button_text">artist</string>
    <string name="song_radio_button_text">song</string>
    <string name="album_radio_button_text">album</string>
    
    <!-- Show List Of Songs Strings -->    
    <string name="show_list_of_songs_title_text">List of Song Searches</string>
    <string name="song_page_title_text">Song Page</string>
    <string name="album_page_title_text">Album Page</string>
    <string name="artist_page_title_text">Artist Page</string>
    
    <!-- Song Playlist Strings -->
    <string name="save_song_to_playlist">Add Playlist</string>
    <string name="show_playlist">See Playlist</string>
    <string name="recommend_user_text">Recommend Me</string>
    <string name="song_playlist_text">Song Playlist</string>
    
    <!-- Song Recommendation Strings -->
    <string name="song_recommend_title">Recommendations</string>
    <string name="show_music_recommendation_title">Recommend Music</string>
    <string name="music_recommendation_title">Music Recommendation</string>
    
    <!-- Project Home Page -->
	<string name="project_home_title">Project Home Page</string>
	
	<!-- User login -->
	<string name="user_login_demo">User Login Demo</string>
	<string name="user_login_title">User Login</string>
	<string name="user_login_message">Enter login credentials</string>
	<string name="user_login_username">Username</string>
	<string name="user_login_password">Password</string>
	<string name="user_login_submit">Submit</string>
	<string name="user_login_logout">Logout</string>
	
	<!-- Create new playlist -->
	<string name="create_new_playlist_title_text">Create New Playlist</string>
	<string name="create_new_playlist_message_text">Enter new playlist name</string>
	<string name="create_new_playlist_submit_text">Submit playlist</string>
	<string name="delete_song_from_playlist_text">Delete song</string>
	<string name="delete_playlist_text">Delete playlist</string>
	
	<!-- User Profile -->
	<string name="user_profile_text">User Profile</string>
	<string name="user_profile_title_text">User Profile statistics</string>
	<string name="user_profile_name_text">UserName</string>
    <string name="user_profile_num_of_playlists_text">Number of playlists</string>
    <string name="user_profile_num_of_playlist_songs_text">Number of playlist songs</string>
    <string name="user_profile_num_of_recomSongs_text">Number of recommended songs</string>
    <string name="user_profile_num_of_recomArtist_text">Number of recommended artists</string>
    <string name="user_profile_num_of_recomAlbum_text">Number of recommended albums</string>
    <string name="user_profile_users_followed_text">List of other users followed</string>
    <string name="user_profile_follow_btn_text">Follow User</string>
    <string name="user_profile_unfollow_btn_text">Unfollow User</string>
    <string name="user_profile_see_user_playlist_btn_text">Follower playlists</string>
    <string name="other_users_text">Other Users</string>
    
    
    
	
</resources>
