<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.musicmania.HomeActivity" >

    <TextView
        android:id="@+id/welcome_user_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_user"
        android:textSize="20sp" />

    <Button
        android:id="@+id/see_playlist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search_music_btn"
        android:layout_below="@+id/create_new_playlist_button"
        android:layout_marginTop="22dp"
        android:text="@string/watch_playlist_button_text" />

    <Button
        android:id="@+id/create_new_playlist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_music_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/create_new_playlist_button_text" />

    <Button
        android:id="@+id/get_recommendation_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/see_playlist_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/get_recommendation_button_text" />

    <Button
        android:id="@+id/search_music_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/create_new_playlist_button"
        android:layout_below="@+id/see_user_profile_page_btn"
        android:layout_marginTop="15dp"
        android:text="@string/search_button_text" />

    <Button
        android:id="@+id/see_user_profile_page_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_user_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/see_user_profile_button_text" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_recommendation_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/user_login_logout" />

</RelativeLayout>