<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.musicmania.HomeActivity" >

    <TextView
        android:id="@+id/user_profile_page_num_of_playlist_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_profile_page_name_textview"
        android:layout_below="@+id/user_profile_page_name_textview"
        android:layout_marginTop="14dp"
        android:text="@string/user_profile_num_of_playlists_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/user_profile_page_num_of_playlist_songs_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_profile_page_num_of_playlist_textview"
        android:layout_below="@+id/user_profile_page_num_of_playlist_textview"
        android:layout_marginTop="16dp"
        android:text="@string/user_profile_num_of_playlist_songs_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/user_profile_page_num_of_recommend_songs_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_profile_page_num_of_playlist_songs_textview"
        android:layout_below="@+id/user_profile_page_num_of_playlist_songs_textview"
        android:layout_marginTop="15dp"
        android:text="@string/user_profile_num_of_recomSongs_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/user_profile_page_num_of_recommend_album_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_profile_page_num_of_recommend_songs_textview"
        android:layout_below="@+id/user_profile_page_num_of_recommend_songs_textview"
        android:layout_marginTop="14dp"
        android:text="@string/user_profile_num_of_recomAlbum_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/user_profile_page_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_profile_page_follows_spinner"
        android:layout_below="@+id/user_profile_page_title_textview"
        android:layout_marginTop="23dp"
        android:text="@string/user_profile_name_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/user_profile_page_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_profile_page_name_textview"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/user_profile_title_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/user_profile_page_num_of_recommend_artist_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_profile_page_num_of_recommend_album_textview"
        android:layout_centerVertical="true"
        android:text="@string/user_profile_num_of_recomArtist_text"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/user_profile_unfollow_someone_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/user_profile_unfollow_btn_text" 
        android:visibility="invisible"/>

    <Button
        android:id="@+id/user_profile_see_other_user_playlist_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/user_profile_see_user_playlist_btn_text"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/user_profile_page_follows_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_profile_unfollow_someone_btn"
        android:layout_alignLeft="@+id/user_profile_see_other_user_playlist_btn"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/user_profile_page_users_followed_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_profile_page_follows_spinner"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:text="@string/user_profile_users_followed_text"
        android:textSize="16sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/user_profile_follow_someone_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_profile_page_users_followed_textview"
        android:layout_alignLeft="@+id/user_profile_page_users_followed_textview"
        android:layout_marginBottom="15dp"
        android:text="@string/user_profile_follow_btn_text" />

    <Button
        android:id="@+id/go_back_from_user_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/user_profile_follow_someone_btn"
        android:layout_alignBottom="@+id/user_profile_follow_someone_btn"
        android:layout_alignParentRight="true"
        android:text="@string/go_to_main_page_text" />

</RelativeLayout>