<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.musicmania.HomeActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/youtube_demo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/youtube_demo_text" />

    <Button
        android:id="@+id/search_last_fm_demo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/youtube_demo_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/search_last_fm_text" />

    <Button
        android:id="@+id/user_login_entry_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_last_fm_demo_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/user_login_demo" />

    <Button
        android:id="@+id/final_project_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_login_entry_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/final_project_text" />

</RelativeLayout>