<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.musicmania.HomeActivity" >

    <TextView
        android:id="@+id/recommend_demo_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_recommendation_title"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/recommend_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/recommend_music_btn"
        android:layout_marginBottom="61dp"
        android:layout_marginRight="25dp" 
        android:visibility="gone"/>

    <RadioGroup
        android:id="@+id/recommend_radio_button_grp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recommend_demo_title_textview"
        android:layout_below="@+id/recommend_demo_title_textview"
        android:layout_marginTop="18dp" >

        <RadioButton
            android:id="@+id/recommend_album_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_radio_button_text" />

        <RadioButton
            android:id="@+id/recommend_artist_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_radio_button_text" />

        <RadioButton
            android:id="@+id/recommend_song_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/song_radio_button_text" />
    </RadioGroup>

    <Button
        android:id="@+id/recommend_music_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recommend_radio_button_grp"
        android:layout_below="@+id/recommend_radio_button_grp"
        android:layout_marginTop="77dp"
        android:text="@string/show_music_recommendation_title" />

    <TextView
        android:id="@+id/recommend_music_selection_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recommend_music_btn"
        android:layout_below="@+id/recommend_radio_button_grp"
        android:layout_marginTop="35dp"
        android:text="" />

</RelativeLayout>