<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.musicmania.HomeActivity" >

    <TextView
        android:id="@+id/user_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/user_login_title" />

    <TextView
        android:id="@+id/user_login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_login_title"
        android:layout_below="@+id/user_login_title"
        android:textSize="18sp"
        android:layout_marginTop="14dp"
        android:text="@string/user_login_message" />

    <TextView
        android:id="@+id/user_login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignLeft="@+id/user_login_message"
        android:layout_below="@+id/user_login_message"
        android:layout_marginTop="23dp"
        android:text="@string/user_login_username" />

    <TextView
        android:id="@+id/user_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignLeft="@+id/user_login_username"
        android:layout_below="@+id/user_login_username"
        android:layout_marginTop="16dp"
        android:text="@string/user_login_password" />

    <EditText
        android:id="@+id/login_user_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/user_login_username"
        android:layout_alignBottom="@+id/user_login_username"
        android:layout_toRightOf="@+id/user_login_title"
        android:inputType="textNoSuggestions"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/login_user_password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_user_name_edittext"
        android:layout_below="@+id/login_user_name_edittext"
        android:ems="10"       
        android:inputType="textPassword" />

    <Button
        android:id="@+id/user_authenticate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_login_password"
        android:layout_below="@+id/login_user_password_edittext"
        android:layout_marginTop="25dp"
        android:text="@string/user_login_submit" />

</RelativeLayout>