<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.musicmania.HomeActivity" >

    <TextView
        android:id="@+id/create_new_playlist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="17dp"
        android:text="@string/create_new_playlist_title_text" />

    <TextView
        android:id="@+id/create_new_playlist_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/create_new_playlist_title"
        android:layout_below="@+id/create_new_playlist_title"
        android:layout_marginTop="20dp"
        android:text="@string/create_new_playlist_message_text" />

    <EditText
        android:id="@+id/create_new_playlist_enter_name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/create_new_playlist_message"
        android:layout_marginLeft="20dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/create_new_playlist_submit_name_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_new_playlist_message"
        android:layout_below="@+id/create_new_playlist_enter_name_editText"
        android:layout_marginTop="20dp"
        android:text="@string/create_new_playlist_submit_text" />

</RelativeLayout>