<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.musicmania.HomeActivity" >

    <TextView
        android:id="@+id/youtube_demo_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youtube_api_demo_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/enter_search_term_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/youtube_demo_title_textview"
        android:layout_below="@+id/youtube_demo_title_textview"
        android:layout_marginTop="18dp"
        android:text="@string/search_term_text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/search_youtube_video_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enter_search_term_textview"
        android:layout_below="@+id/enter_search_term_textview"
        android:layout_marginTop="62dp"
        android:text="@string/fetch_youtube_video_text" />

    <EditText
        android:id="@+id/searchTermEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search_youtube_video_btn"
        android:layout_below="@+id/enter_search_term_textview"
        android:layout_marginTop="20dp"
        android:ems="10" 
        android:inputType="textNoSuggestions">
        <requestFocus />
    </EditText>

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/youtube_demo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search_youtube_video_btn"
        android:layout_centerVertical="true"
        android:layout_margin="12dip" />
    
</RelativeLayout>