<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.musicmania.HomeActivity" >

    <TextView
        android:id="@+id/artist_year_formed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/artist_page_name_text"
        android:layout_below="@+id/artist_page_name_text"
        android:layout_marginTop="14dp"
        android:text="YEAR_FORMED"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/artist_page_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/artist_page_title_textview"
        android:layout_below="@+id/artist_page_title_textview"
        android:layout_marginTop="15dp"
        android:text="name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/artist_page_mbid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/artist_year_formed_text"
        android:layout_below="@+id/artist_year_formed_text"
        android:layout_marginTop="16dp"
        android:text="mbid"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/artist_page_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/artist_page_title_text"
        android:textSize="20sp" />

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/artist_page_youtube_demo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/artist_page_tags_text"
        android:layout_margin="12dip"
        android:layout_marginTop="38dp" >
    </com.google.android.youtube.player.YouTubePlayerView>

    <TextView
        android:id="@+id/artist_page_tags_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/artist_page_mbid_text"
        android:layout_below="@+id/artist_page_mbid_text"
        android:layout_marginTop="14dp"
        android:text="TAGS"
        android:textSize="16sp" />

    <Button
        android:id="@+id/go_to_main_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp"
        android:layout_marginLeft="37dp"
        android:layout_toRightOf="@+id/add_to_artist_recommend_list_button"
        android:text="@string/go_to_main_page_text" />

    <Button
        android:id="@+id/add_to_artist_recommend_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/go_to_main_page"
        android:layout_alignBottom="@+id/go_to_main_page"
        android:layout_alignLeft="@+id/artist_page_tags_text"
        android:text="@string/recommend_user_text" />

</RelativeLayout>